--- a/pwm_generate/.vscode/settings.json
+++ b/pwm_generate/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
-    "idf.portWin": "COM8",
     "idf.flashType": "UART",
-    "idf.adapterTargetName": "esp32"
+    "idf.adapterTargetName": "esp32",
+    "idf.portWin": "COM8",
+    "idf.openOcdConfigs": [
+        "board/esp32-bridge.cfg"
+    ]
 }
